tests/errors/loop_03.py
def main():
    i: i32
    for i in range(5):
        print(i)
        i=i*10

main()